# esp32-graphical-bootloader

./: .gitignore  Apps.cmake  Bootloader.cmake  CMakeLists.txt  README.md  SelectBoard.cmake  SingleImage.cmake  build-esp32-p4-function-ev-board.sh  diagram.json  esp-launchpad.toml  partitions.csv  sdkconfig  sdkconfig.bsp.esp-box-3  sdkconfig.bsp.esp32_p4_function_ev_board  sdkconfig.defaults.esp-box  sdkconfig.defaults.esp32_p4_function_ev_board  sdkconfig.defaults.m5stack_core_s3  wokwi.toml
.github/workflows/: build.yml
apps/calculator/: CMakeLists.txt  sdkconfig.defaults.esp-box-3
apps/calculator/main/: CMakeLists.txt  calculator.c  idf_component.yml
apps/game_of_life/: CMakeLists.txt  sdkconfig.defaults.m5stack_core_s3
apps/game_of_life/main/: CMakeLists.txt  game_of_life.c  idf_component.yml
apps/synth_piano/: CMakeLists.txt  sdkconfig.defaults.m5stack_core_s3
apps/synth_piano/main/: CMakeLists.txt  synth_piano.c
apps/tic_tac_toe/: CMakeLists.txt  sdkconfig.defaults.esp32_p4_function_ev_board  sdkconfig.defaults.m5stack_core_s3
apps/tic_tac_toe/main/: CMakeLists.txt  tic_tac_toe.c
apps/wifi_list/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.m5stack_core_s3
boards/: esp-box.cfg  esp32_p4_function_ev_board.cfg  m5stack_core_s3.cfg
configs/: esp-box-3
idf_component_templates/: esp-box.yml  esp32_p4_function_ev_board.yml  m5stack_core_s3.yml
main/: CMakeLists.txt  bootloader_ui.c  graphical_bootloader_main.c  idf_component.yml
main/image/: icon_about_us.c
resources/: convert-png-to-lvgl-rgb565a.py
(+3 files in other folders)
